* Version 2.1 unreleased

* Version 2.0 released 2010-04-23

  * Support for new replicated server protocol.

** Version 1.9 released 2009-10-12

** Version 1.8 released 2009-04

** Version 1.7 released 2009-03

** Version 1.6 released 2009-03

** Version 1.5 released 2009-03

** Version 1.4 released 2009-03

** Version 1.3 released 2008-10

** Version 1.2 released 2008-05

** Version 1.1 released 2008-01